# machine_analyzer

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  A Lightweight Python Package for Industrial Time Series.pptx  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  example_usage.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py
.github/workflows/: ci.yml  security.yml
docs/: Makefile  README.md  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/api_reference/: index.rst
docs/examples/: basic_analysis.rst  index.rst
docs/user_guide/: index.rst  installation.rst
machine_analyzer/: __init__.py  cycle_segmenter.py  machine_data_loader.py  quality_analyzer.py  report_generator.py  state_detector.py
notebook/: machine_analysis_report_20250628_135924.txt  pipeline_exemple.ipynb
tests/: __init__.py  load_test.py  test_cycle_segmenter.py  test_machine_data_loader.py  test_quality_analyzer.py  test_report_generator.py  test_state_detector.py
